# I_like_trains

./: .gitignore  README.md  config.json  main.py  plagiarism_detector.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
client/: __main__.py  agent.py  agent_thread.py  base_agent.py  client.py  event_handler.py  game_state.py  network.py  renderer.py
common/: base_agent.py  client_config.py  config.py  messages.py  move.py  performance_profiler.py  server_config.py  state.py  test_state.py
common/agents/: agent.py  keyboard.py
docs/: agent-implementation.md  game-modes.md  game-rules.md  setup.md  tests.md  tests_performances.md
grading/: __main__.py  grading.py
maps/: map_civil.txt  map_corridors.txt  map_epfl.txt  map_heart.txt  map_irregular.txt  map_regular.txt  map_test.txt
server/: __main__.py  ai_client.py  ai_clients.py  delivery_zone.py  game.py  game_test.py  passenger.py  room.py  room_process.py  room_test.py  server.py  test_game.py  train.py
single_process/: __main__.py
tests/: README.md  conftest.py  requirements-test.txt  run_performance_tests.py  test_client_performance.py  test_live_performance.py  test_room.py  test_scalability.py  test_server_performance.py
