[project]
name = "i-love-buses"
version = "0.2.0"
description = "A multiplayer network game"
readme = "README.md"
requires-python = "==3.14.2"
dependencies = [
    "pydantic>=2.13.1",
    "pygame-ce==2.5.6",
]

[dependency-groups]
dev = [
    "coverage>=7.13.5",
    "pyright==1.1.408",
    "ruff==0.15.10",
]
